[gd_scene load_steps=2 format=3 uid="uid://cb78kr50naraw"]

[ext_resource type="Script" path="res://new_script.gd" id="1_myykd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myykd")

[node name="InputText" type="CodeEdit" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 155.0
offset_right = 573.0
offset_bottom = 624.0
text = "{\"key\":1, \"key2\": \"string\", \"key3\": 1.52}"
auto_brace_completion_enabled = true

[node name="saveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 19.0
offset_right = 566.0
offset_bottom = 140.0
text = "Save"

[node name="loadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 11.0
offset_right = 1130.0
offset_bottom = 144.0
text = "Load"

[node name="OutputText" type="CodeEdit" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 158.0
offset_right = 1131.0
offset_bottom = 627.0
editable = false

[connection signal="pressed" from="saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="loadButton" to="." method="_on_load_button_pressed"]
